--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <title>Weather</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
   </head>
   <body>
     <div id="app"></div>
